created getAllCoins() method